# DHviz2

./: .gitignore  README.md
Assets/Files/: Params.hpp  jsonParser.py
Assets/Materials/: O.mat  Plane.mat  Y.mat
Assets/Prefabs/: Control1.prefab  Frame0.prefab  Joint1.prefab
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: CameraManager.cs  CenterCamera.cs  ConnectSliderText.cs  Constants.cs  InputNavigator.cs  JointTracker.cs  Model.cs  ModelTest.cs  MouseOrbit.cs  SliderScript.cs  TauManager.cs
Assets/Scripts/Python/: DynamicsClient.asmdef  DynamicsClient.py  DynamicsClientHandler.cs  Params.json  python_dh_dynamics.py
Assets/TextMesh Pro/Resources/Fonts & Materials/: LiberationSans SDF - Fallback.asset
ProjectSettings/: ProjectSettings.asset
cpp/: CMakeLists.txt  Params.json  ParamsOW.json
cpp/src/: DynamicModel.cpp  DynamicModelEXE.cpp  G.hpp  M.hpp  Model.cpp  Model.hpp  Params.hpp  V.hpp
